# stegtriage

./: .gitignore  FUTURE_WORK.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: release.yml
stegtriage/: cli.py  models.py  orchestrator.py  patterns.py
stegtriage/data/: default_wordlist.txt
stegtriage/modules/: binwalk_mod.py  exif.py  fileinfo.py  lsb.py  steghide.py  strings_mod.py  zsteg.py
tests/: conftest.py  make_fixtures.py  test_lsb.py  test_orchestrator.py  test_patterns.py
